[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphic/Alien_04.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemy/Rotate.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemy/Weapon.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Bullets/Bullet_2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Enemy/Alien_standard_IS.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/explosion_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Enemy/Shake.gd" type="Script" id=8]
[ext_resource path="res://SFX/Boom.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 64.7912

[node name="Alien_04" instance=ExtResource( 1 )]

_sections_unfolded = [ "Transform", "Visibility" ]
max_live = 15

[node name="Sprite" parent="." index="0"]

light_mask = 8
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" parent="." index="1"]

visible = false
shape = SubResource( 1 )

[node name="Rotate" type="Node" parent="." index="2"]

script = ExtResource( 3 )

[node name="Weapon" type="Node" parent="." index="3"]

editor/display_folded = true
script = ExtResource( 4 )
bullet = ExtResource( 5 )

[node name="Shoot" type="Timer" parent="Weapon" index="0"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[node name="SalwaWait" type="Timer" parent="Weapon" index="1"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[node name="SalwaTime" type="Timer" parent="Weapon" index="2"]

process_mode = 1
wait_time = 0.6
one_shot = true
autostart = false

[node name="Alien_standard_IS" parent="." index="4" instance=ExtResource( 6 )]

speed = 100

[node name="Ded_sound" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Shake" parent="." index="8"]

script = ExtResource( 8 )

[node name="Boom" parent="." index="9" instance=ExtResource( 9 )]

[connection signal="on_death" from="." to="Boom" method="boom"]

[connection signal="timeout" from="Weapon/Shoot" to="Weapon" method="_on_Shoot_timeout"]

[connection signal="timeout" from="Weapon/SalwaWait" to="Weapon" method="_on_SalwaWait_timeout"]

[connection signal="timeout" from="Weapon/SalwaTime" to="Weapon" method="_on_SalwaTime_timeout"]

[connection signal="finished" from="Ded_sound" to="Shake" method="_on_Ded_sound_finished"]


